outputs/workspace_output_1768136125_7471.txt
  File "/tmp/fix_structure.py", line 9
    if ')}` in lines[i] and ');' in lines[i+1]:
                             ^
SyntaxError: unmatched ')'
